tests/sksl/errors/ReservedNameFvec2.glsl
### Compilation failed:

error: 1: 'fvec2' is a reserved word
int fvec2;
    ^^^^^
1 error
